# Image-Based-Recommender-System-using-ResNet50

./: .dockerignore  .gitattributes  .gitignore  .python-version  Dockerfile  README.md  app.py  docker-compose.yml  helper.py  pyproject.toml
artifacts/: filenames.pkl
research/: features.py
src/: __init__.py  app.py
static/: script.js  style.css
templates/: index.html
