[project]
name = "image-based-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "numpy>=2.1.3",
    "pillow>=11.2.1",
    "python-multipart>=0.0.20",
    "tensorflow>=2.19.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.2",
]
