[project]
name = "image-based-recommender"
version = "0.1.0"
description = "Image-based recommendation system using ResNet50"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi",
    "gunicorn>=23.0.0",
    "jinja2",
    "numpy",
    "pillow",
    "python-multipart",
    "tensorflow",
    "tqdm",
    "uvicorn",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "."}
